--- a/module.xcconfig
+++ b/module.xcconfig
@@ -26,4 +26,4 @@
 // IMPORTANT NOTE: always use $(inherited) in your overrides
 // 
 
-OTHER_LDFLAGS=$(inherited) -framework AssetsLibrary
+OTHER_LDFLAGS=$(inherited) -framework CoreMedia -framework AssetsLibrary
